--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "customtkinter>=5.2.2",
+    "folium>=0.20.0",
     "loguru>=0.7.3",
     "numpy>=2.3.5",
     "packaging>=25.0",
